--- a/src/app/pages/m-datos/m-datos.page.html
+++ b/src/app/pages/m-datos/m-datos.page.html
@@ -11,7 +11,7 @@
     <ion-avatar>
       <img [src]="fotoUEnviada || 'https://ionicframework.com/docs/img/demos/avatar.svg'" />
     </ion-avatar>
-    <ion-button (click)="takePicture()" class="foto"><ion-icon name="camera-outline"></ion-icon> cambiar su fotito</ion-button>
+    <ion-button (click)="takePicture()" class="foto"><ion-icon name="camera-outline"></ion-icon></ion-button>
   </ion-card>
 
   <ion-card>
