--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -4,7 +4,7 @@
     <!-- LOGO DEL CARRITO -->
     <div *ngIf="rol == 1" class="demo-section" slot="end">
       <ion-icon style="width: 35px; height: 35px; color: #050025;" name="cart-outline"
-        [routerLink]="['/carrito']"></ion-icon>
+        [routerLink]="['/carrito2']"></ion-icon>
     </div>
 
     <!-- MENÚ DE BÚSQUEDA -->
