--- a/src/app/pages/Shop/tienda/tienda.page.scss
+++ b/src/app/pages/Shop/tienda/tienda.page.scss
@@ -40,7 +40,7 @@ ion-card-content {
     --background: #7CC9CF;
 }
 .otro2{
-    --background: #3D2652;
+    --background: #0C909C;
 }
 
 ion-card-title {
