--- a/src/app/pages/categoria/relojsma/relojsma.page.html
+++ b/src/app/pages/categoria/relojsma/relojsma.page.html
@@ -33,7 +33,7 @@
           <ion-card-title class="ion-title">{{ producto.nombreProducto }}</ion-card-title>
           <ion-card-content>
             <p>{{ producto.precio | currency:'$':true:'4.0-0' }}</p>
-            <ion-button expand="50px" style="align-items: center;display: flex;" *ngIf="rol == 1" (click)= "ver(producto)">Detalle</ion-button>
+            <ion-button expand="50px" style="align-items: center;display: flex;"  (click)= "ver(producto)">Detalle</ion-button>
             <ion-button expand="50px" style="align-items: center;display: flex;" *ngIf="rol == 2" (click)="modificar(producto)">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
