--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.scss
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.scss
@@ -1,19 +1,31 @@
 //ESTO ES DE LA CONTRASEÑA
 .example-container2 mat-form-field+mat-form-field {
+  border: 3px solid #3D2652;
   margin-left: 0;
+  font-family: 'Montserrat';
+  --background: white;
 }
 
 .example-right-align {
+  border: 3px solid #3D2652;
   text-align: right;
+  font-family: 'Montserrat';
+  background: white;
 }
 
 .example-right-align {
+  border: 3px solid #3D2652;
   text-align: right;
+  font-family: 'Montserrat';
+  --background: white;
 }
 
 //ESTO ES DEL CORREO
 .example-container mat-form-field+mat-form-field {
+  border: 3px solid #3D2652;
   margin-left: 0;
+  font-family: 'Montserrat';
+  --background: white;
 }
 
 //ESTO ES DE LA CARD:
@@ -22,18 +34,20 @@ ion-card {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 460px;
+  height: 465px;
   max-width: 350px;
-  margin: 150px auto;
+  margin: 175px auto;
   border-radius: 20px;
-  box-shadow: 0px 2px 6px #79F2E6;
-  background: #010626;
+  border: 3px solid #3D2652;
+  box-shadow: #3D2652;
+  background: white;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=DM+Serif+Display&family=Montserrat:wght@300&display=swap');
 
 //el fondo de la aplicacion:
 ion-content {
-  --background: url(https://w0.peakpx.com/wallpaper/939/832/HD-wallpaper-deep-purple-blue-design-pink-premium.jpg);
-
+  --background: white;
 }
 
 //LA IMAGEN:
@@ -46,25 +60,32 @@ img {
   height: 150px;
   margin: auto;
 }
+
 //LAS P:
 p {
-font-size: 15px;
-color: white;
+  font-size: 15px;
+  font-family: 'Montserrat';
+  color: black;
+
 }
+
 //LAS A
-a{
-  color: white;
+a {
+  font-family: 'Montserrat';
+  color: black;
 }
+
 //CUANDO SE PONGA PEQUEÑA LA PANTALLA
-@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px){
+@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px) {
 
   ion-card {
     height: 500px;
     width: 400px;
-    background: #222222;
+    background: white;
   }
 
 }
+
 ion-button {
   --background: #79F2E6;
   display: flex;
