--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,13 +71,12 @@
           </ion-row>
         </ion-grid>
       </ion-item>
-
-
+      <!--el feriado-->
       <ion-item>
         <ion-grid>
           <ion-row>
             <ion-col size="auto">
-              <ion-icon name="headset-outline"></ion-icon>
+              <ion-icon name="calendar-outline"></ion-icon>
             </ion-col>
             <ion-col>
               <ion-label [routerLink]="['/feriados']"> Feriados</ion-label>
