se puede ver el carrito en todas las paginas

--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -3,7 +3,7 @@
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end">
       <ion-icon style="width: 35px; height: 35px; color: #050025;" name="cart-outline"
-        [routerLink]="['/carrito']"></ion-icon>
+        [routerLink]="['/carrito2']"></ion-icon>
     </div>
     <!-- MENÚ DE BÚSQUEDA -->
     <ion-buttons slot="start">
