--- a/src/app/pages/categoria/audigamer/audigamer.page.html
+++ b/src/app/pages/categoria/audigamer/audigamer.page.html
@@ -3,7 +3,7 @@
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end" *ngIf="rol === 1" >
       <ion-icon style="width: 35px; height: 35px; color: #050025;" name="cart-outline"
-        [routerLink]="['/carrito']"></ion-icon>
+        [routerLink]="['/carrito2']"></ion-icon>
     </div>
 
     <!-- MENÚ DE BÚSQUEDA -->
