Revert "borre miuchas cosas"
This reverts commit 369d70e45934c4bc9f0e023e2827bc228bb7bf3a.

--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end">
-      <ion-icon *ngIf="idRol === 1" style="width: 35px; height: 35px; color: #050025;" name="cart-outline"
+      <ion-icon style="width: 35px; height: 35px; color: #050025;" name="cart-outline"
         [routerLink]="['/carrito2']"></ion-icon>
     </div>
     <!-- MENÚ DE BÚSQUEDA -->
