ya no se sale del rol cuando se va a la tienda desde el carrito

--- a/src/app/pages/Shop/carrito2/carrito2.page.html
+++ b/src/app/pages/Shop/carrito2/carrito2.page.html
@@ -28,5 +28,6 @@
   
   <div *ngIf="carritoVacio">
     El carrito está vacío.
+    <ion-button [routerLink]="['/tienda']">Ir a la tienda</ion-button>
   </div>
 </ion-content>
