--- a/src/app/pages/Shop/historial/historial.page.scss
+++ b/src/app/pages/Shop/historial/historial.page.scss
@@ -1,77 +1,50 @@
-/* Estilos generales para las tarjetas */
-.card-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 20px;
-  /* Ajusta el margen de pantalla */
-}
-
-.custom-card {
-  background: #F3F2F0;
-  box-shadow:6px 2px 6px black;
-  display: flex;
-  flex-direction: column;
-  /* Coloca el contenido en columna */
-  align-items: center;
-  width: 90%;
-  /* Aumenta el ancho de la tarjeta al 80% del contenedor */
-  text-align: center;
-  /* Centra el texto horizontalmente */
-  margin-bottom: 10px;
-}
-
-.card-image {
-  width: 100%;
-  max-width: 350px;
-  object-fit: cover;
-}
-
-.card-content {
-  flex: 1;
-  /* Ocupa el espacio restante */
-  padding: 20px;
-  text-align: left;
-  width: 100%;
-  /* Ajusta el ancho del contenido */
-}
-
-/* Estilos para los títulos y textos */
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Tilt+Prism&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-
-p {
-  color: black;
-  font-size: 18px;
-  text-align: left;
-  font-family: 'ADLaM Display';
-}
-
-.subti {
-  font-size: 18px;
-  font-family: 'Poppins', sans-serif;
-  color: black;
-}
-
-.titulo {
-  color: black;
-  font-family: 'DM Serif Display', serif;
-  font-size: 25px;
-  text-align: left;
-  margin: 5px;
-}
-/*esto es el fondo de la pagina*/
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=DM+Serif+Display&family=Montserrat:wght@300&display=swap');
 
 ion-content {
-  --background-color: #F3F2F0;
+    --background: white;
 }
 
-//esto es del toolbar:
+/* En tu archivo .scss o .css */
+ion-card {
+    background-color: #050025;
+    border: 3px solid #050025;
+    width: max-content;
+    height: max-content;
+}
 
-ion-toolbar {
-  --background-color: #F3F2F0;
-  box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.2); /* Ajusta los valores según tus preferencias */
+/* Contenedor flex para la imagen y el contenido */
+ion-card div {
+    display: flex;
+    align-items: center;
+}
+
+/* Estilo para la imagen dentro del contenedor flex */
+ion-card ion-img {
+    width: 200px;
+    height: max-content;
+}
+
+ion-card-title {
+    font-size: 17px;
+    color: white;
+    font-family: 'Montserrat';
+    margin: 5px;
+}
+
+p {
+    margin: 10px;
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Montserrat';
+}
 
 
+ion-title{
+    text-align: center;
+    font-family: 'Montserrat';
+}
+
+ion-icon{
+    margin-left: 10px;
+    color: #050025;
 }
