ahora si esta todo jajjaja

--- a/src/app/pages/Shop/historial/historial.page.html
+++ b/src/app/pages/Shop/historial/historial.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <p ><ion-icon name="alert-circle-outline"></ion-icon> Punto de retiro: Sucursal de Retiro: Los Leones,
+  <p ><ion-icon name="alert-circle-outline"></ion-icon> Punto de retiro:Los Leones,
     #342, 2°piso, local 23</p>
   <br>
   <ion-list *ngFor="let venta of arregloProductosResultado">
